tests/paczka1/fuzzy1/87397423.err
Error in line 9: qn4SPAAjBL S765 88,4
Error in line 10: qn4SPAAjBL S215 13,0
Error in line 33: Zfp5QKP S215 7,91
Error in line 20: qn4SPAAjBL S546 20,6
